<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="calculatorViewModel"
            type="com.szymonstasik.kalkulatorsredniejwazonej.calculator.CalculatorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/green_alternative"
        android:layout_height="match_parent"
        tools:context=".calculator.CalculatorFragment">

        <com.szymonstasik.kalkulatorsredniejwazonej.utils.StrokeTextView
            android:id="@+id/fragmentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/calculate"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:fontFamily="@font/ubuntu_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.szymonstasik.kalkulatorsredniejwazonej.utils.StrokeTextView
            android:id="@+id/chooseNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/choose_note"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentName" />

        <com.szymonstasik.kalkulatorsredniejwazonej.utils.StrokeTextView
            android:id="@+id/chooseWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/choose_weight"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentName" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/calculateButton"
            app:layout_constraintTop_toBottomOf="@+id/chooseNote">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/notesAndWeightesRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/deleteNote"
                    style="@style/RoundedLightYellowButton"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/rounded_ten_dp"
                    android:text="@string/delete_note"
                    android:textSize="14sp" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/addNewNote"
                    style="@style/RoundedLightYellowButton"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/rounded_ten_dp"
                    android:text="@string/add_note"
                    android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <TextView
            android:onClick="@{() -> calculatorViewModel.onCalculateClick()}"
            android:id="@+id/calculateButton"
            style="@style/RoundedLightYellowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_ten_dp"
            android:text="@string/calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>