<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="resultViewModel"
            type="com.szymonstasik.kalkulatorsredniejwazonej.calcuatorresult.ResultViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/parent"
        android:background="@color/green_primary"
        tools:context=".calcuatorresult.ResultFragment">

        <com.szymonstasik.kalkulatorsredniejwazonej.utils.StrokeTextView
            android:id="@+id/strokeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/results"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strokeTextView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.szymonstasik.kalkulatorsredniejwazonej.utils.StrokeTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/notes"
                        android:textSize="20sp"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <com.szymonstasik.kalkulatorsredniejwazonej.utils.StrokeTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/weights"
                        android:textSize="20sp"
                        android:textColor="@color/white" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/notesAndWeightsRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.szymonstasik.kalkulatorsredniejwazonej.utils.StrokeTextView
                    android:id="@+id/resultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_marginEnd="16dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/buttonName"
                        style="@style/RoundedLightYellowButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_ten_dp"
                        android:text="@string/name_result"
                        android:textSize="14sp" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/changeNotes"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        style="@style/RoundedLightYellowButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_ten_dp"
                        android:onClick="@{() -> resultViewModel.onChangeClick()}"
                        android:text="@string/back"
                        android:textSize="14sp" />
                    <TextView
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:id="@+id/calculateAgain"
                        style="@style/RoundedLightYellowButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_ten_dp"
                        android:onClick="@{() -> resultViewModel.onCalculateAgainCLick()}"
                        android:text="@string/calculate_once_again"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>