<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="menuViewModel"
            type="com.szymonstasik.kalkulatorsredniejwazonej.menu.MenuViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/green_primary"
        android:layout_height="match_parent"
        tools:context=".menu.MenuFragment">

        <ImageView
            android:id="@+id/appImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:padding="20dp"
            android:background="@drawable/white_circle"
            android:src="@drawable/icon"
            app:layout_constraintBottom_toTopOf="@+id/calculateButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appName" />

        <TextView
            android:onClick="@{() -> menuViewModel.onCalculatorClick()}"
            android:id="@+id/calculateButton"
            style="@style/RoundedLightYellowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_ten_dp"
            android:text="@string/calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,3:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appImage" />

        <TextView
            android:id="@+id/historyButton"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/history"
            android:background="@drawable/rounded_ten_dp"
            style="@style/RoundedLightYellowButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculateButton" />

        <com.szymonstasik.kalkulatorsredniejwazonej.utils.StrokeTextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:fontFamily="@font/ubuntu_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>